<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="200dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/editText_username1"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="#ffffff"
        android:paddingLeft="2dp"
        android:hint="@string/Username"
        android:drawableLeft="@drawable/username"/>

    <EditText
        android:id="@+id/editText_password1"
        android:paddingLeft="2dp"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock"/>
    <Button
        android:id="@+id/button_Login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#8B70BB"
        android:layout_marginTop="20dp"
        android:text="@string/SignIn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/notregistered"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#110207"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/register"
            android:paddingLeft="10dp"
            android:textColor="#8B70BB"
            android:textStyle="bold"/>
    </LinearLayout>



</LinearLayout>
